# LojaSync

./: .gitignore  AGENTS.md  DailyBugSwarm.md  EnxameContinuo.md  INDEX.md  Iniciar LojaSync Online.bat  Iniciar LojaSync.bat  PATCHNOTES.md  PATCH_NOTES.md  README.md  ShipSwarm.md  SwarmCollector-geral.md  SwarmLedger-bugs.md  SwarmLedger-documentacao.md  SwarmLedger-geral.md  SwarmLedger-landing.md  SwarmLedger-migracao-visual.md  SwarmLedger-performance.md  SwarmLedger-ready-to-ship.md  changelog.md  download_character.ps1  fetch_character.ps1  launcher.py  patchatt.bat  patchnotes.md  pyproject.toml  readme.md  requirements.txt
DocsDev/: INDEX.md
Legacy/: README.md
automation/: crawler-setup.md  leads.db  lojasync-crawler.py  lojasync-outreach.py  outreach_log.json  requirements.txt
data/: appearance.json  brands.json  desktop_automation.json  margem.json  metrics.json  products_active.jsonl  products_history.jsonl  targets.json
docs/: desenvolvimento.md  operacao.md  release.md
engine/: README_ENGINE.md
frontend-ts/: index.html  package-lock.json  package.json  vite.config.ts
grokassets/: BRAND-USAGE-GUIDELINES.md  README.md  manifest.json  visual-bible.md
grokimaginevideos/: README.md
lojasync-concepts-visual/: colors_and_type-console.css  colors_and_type-diurno.css  colors_and_type-operacional.css  generation-tree.json  lojasync-concepts-visual.design  orchestration-summary.json
scripts/: bench_9router_romaneio.py
tests/: _invoice_dump.py  _invoice_harness.py  _ocr_dump.py  _super_romaneios_report.json  auth_test_support.py  test_auth_routes.py  (+28 more)
(+370 files in other folders)
