[project]
name = "lojasync"
version = "1.2.6"
description = "LojaSync 1.2.6 - projeto principal"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "websockets>=12",
  "PyPDF2>=3.0",
  "pypdf>=4.2",
  "pdfplumber>=0.11",
  "PyMuPDF>=1.24",
  "pillow>=10.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
  "-m",
  "not local_files",
]
markers = [
  "local_files: tests that read PDFs/images from the user's local Downloads folders; excluded from the default suite",
]
